Edited README & added new post

--- a/public/grotesk/index.html
+++ b/public/grotesk/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="The reason I built grotesk was to stop myself from repeating the same typographic styles in every project. Learn more about how I did it in the post." />
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="../assets/styles/grotesk.light.css">
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="../assets/styles/highlights.css">
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="../assets/styles/main.css">
+        <link rel="stylesheet" href="../assets/styles/grotesk.light.min.css">
+        <link rel="stylesheet" href="../assets/styles/highlights.min.css">
+        <link rel="stylesheet" href="../assets/styles/main.min.css">
         <title>How I built ‘grotesk’</title>
     </head>
     <body>
@@ -19,7 +19,7 @@
 
             <div class="content">
                 <h1>How I built ‘grotesk’</h1>
-                <p>Mon Mar 09 2020</p>
+                <p>Sun Feb 02 2020</p>
                 <hr />
                 <h3 id="what-is-grotesk">What is grotesk?</h3>
 <p>Grotesk is a css library and react component that aims to make web typography simple. The reason I built it is because I&#39;ve noticed that I start almost every static website off with the same set of themes or typographic rules, so I decided to build a tiny library that I can just plug into my next project easily. Since I mostly only work on react applications or plain ol&#39; static websites I made a react component and a css library.</p>
