--- a/public/beginnings/index.html
+++ b/public/beginnings/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="My reasons for starting a blog." />
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="../assets/styles/grotesk.light.css">
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="../assets/styles/highlights.css">
-        <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="../assets/styles/main.css">
+        <link rel="stylesheet" href="../assets/styles/grotesk.light.min.css">
+        <link rel="stylesheet" href="../assets/styles/highlights.min.css">
+        <link rel="stylesheet" href="../assets/styles/main.min.css">
         <title>Why I'm starting a blog</title>
     </head>
     <body>
