Changed config to use author website instead of twitter

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <header>
                 <h1>Blog</h1>
                 <p>—</p>
-                <p>This blog is written by Kartik Nair, a web developer and designer making lot's of stuff in Dubai. To find out what he's up to <a href="https://twitter.com/kartiknair">follow him on twtter</a></p>
+                <p>This blog is written by <a href="https://kartikn.me">Kartik Nair</a>, a web developer and design enthusiast who's building stuff in Dubai.</p>
                 <hr />
             </header>
             
